RL: Added policy gradient theorm

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a8d663f",
+   "id": "ce2ae81a",
    "metadata": {},
    "source": [
     "# Policy Gradient Method\n",
@@ -1517,7 +1517,32 @@
     "\n",
     "Formally, the optimization problem is:\n",
     "\n",
-    "$$\\theta^* = \\arg \\max_\\theta r(\\pi_\\theta)$$"
+    "$$\\theta^* = \\arg \\max_\\theta r(\\pi_\\theta)$$\n",
+    "\n",
+    "## Policy Gradient Theorem\n",
+    "Once we define the learning objective, our next step is to optimize it by adjusting the policy parameters $\\theta$. Since our goal is to maximize the objective, we use gradient ascent to update the parameters in the direction of increasing performance. The gradient of the average reward objective is\n",
+    "\n",
+    "$$\n",
+    "\\nabla_{\\theta} r(\\pi) = \\nabla_{\\theta} \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\pi(a \\mid s) \\sum_{s’, r} p(s’, r \\mid s, a) , r\n",
+    "$$\n",
+    "\n",
+    "The term \\mu_{\\pi}(s) represents the state distribution under policy $\\pi$. However, this distribution changes whenever the policy changes, making its gradient extremely difficult to compute accurately, which is impractical.\n",
+    "\n",
+    "\n",
+    "The policy gradient theorem resolves this issue by providing a clean, analytic expression for the gradient that avoids differentiating the state distribution. It shows that\n",
+    "\n",
+    "$$\\nabla_{\\theta} r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\nabla_{\\theta} \\pi(a \\mid s) , q_{\\pi}(s, a)$$\n",
+    "\n",
+    "* $q_{\\pi}(s, a)$: the action-value function, representing the expected return starting from state $s$, taking action $a$, and then following policy $\\pi$.\n",
+    "* $\\nabla_{\\theta} \\pi(a \\mid s)$ is the gradient of the policy with respect to its parameters.\n",
+    "\n",
+    "This form bypasses the need to compute $\\nabla_{\\theta} \\mu_{\\pi}(s)$ and gives a practical way to estimate the gradient from experience.\n",
+    "\n",
+    "The action-value $q_{\\pi}(s, a)$ serves as a directional signal for the gradient\n",
+    "* If an action is better than average, $q_{\\pi}(s, a)$ will be high, leading to a positive gradient. This increases the probability of selecting that action in the future.\n",
+    "* If an action is worse than average, $q_{\\pi}(s, a)$ will be low or negative, leading to a negative gradient. This decreases the probability of selecting that action.\n",
+    "\n",
+    "Thus, the policy gradient theorem naturally pushes the policy toward actions that yield higher returns, improving the agent’s behavior over time."
    ]
   },
   {
