RL: Added stochastic policy gradient

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce2ae81a",
+   "id": "63eb2226",
    "metadata": {},
    "source": [
     "# Policy Gradient Method\n",
@@ -1526,23 +1526,70 @@
     "\\nabla_{\\theta} r(\\pi) = \\nabla_{\\theta} \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\pi(a \\mid s) \\sum_{s’, r} p(s’, r \\mid s, a) , r\n",
     "$$\n",
     "\n",
-    "The term \\mu_{\\pi}(s) represents the state distribution under policy $\\pi$. However, this distribution changes whenever the policy changes, making its gradient extremely difficult to compute accurately, which is impractical.\n",
+    "Once we know the gradient of the objective, we can update the policy's parameter, $\\theta$, with gradient ascent with step size of $\\alpha$, where\n",
     "\n",
+    "$$\\theta_{t+1} = \\theta_t + \\alpha \\nabla_{\\theta} r(\\pi)$$\n",
+    "\n",
+    "However, in the gradient of the average reward, the term $\\mu_{\\pi}(s)$ represents the state distribution under policy $\\pi$ because his distribution changes whenever the policy changes, making its gradient extremely difficult to compute accurately, which is impractical.\n",
     "\n",
     "The policy gradient theorem resolves this issue by providing a clean, analytic expression for the gradient that avoids differentiating the state distribution. It shows that\n",
     "\n",
     "$$\\nabla_{\\theta} r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\nabla_{\\theta} \\pi(a \\mid s) , q_{\\pi}(s, a)$$\n",
     "\n",
     "* $q_{\\pi}(s, a)$: the action-value function, representing the expected return starting from state $s$, taking action $a$, and then following policy $\\pi$.\n",
-    "* $\\nabla_{\\theta} \\pi(a \\mid s)$ is the gradient of the policy with respect to its parameters.\n",
+    "* $\\nabla_{\\theta} \\pi(a \\mid s)$: the gradient of the policy with respect to its parameters.\n",
     "\n",
     "This form bypasses the need to compute $\\nabla_{\\theta} \\mu_{\\pi}(s)$ and gives a practical way to estimate the gradient from experience.\n",
     "\n",
-    "The action-value $q_{\\pi}(s, a)$ serves as a directional signal for the gradient\n",
-    "* If an action is better than average, $q_{\\pi}(s, a)$ will be high, leading to a positive gradient. This increases the probability of selecting that action in the future.\n",
-    "* If an action is worse than average, $q_{\\pi}(s, a)$ will be low or negative, leading to a negative gradient. This decreases the probability of selecting that action.\n",
+    "In the policy gradient theorem expression, $\\nabla_{\\theta} \\pi(a \\mid s)$ describes how the probability of selecting each action changes as the policy parameters $\\theta$ are adjusted. \n",
+    "* If a small increase in a parameter raises the probability of selecting an action, the gradient is positive for that action.\n",
+    "* If a small increase lowers the probability, the gradient is negative.\n",
     "\n",
-    "Thus, the policy gradient theorem naturally pushes the policy toward actions that yield higher returns, improving the agent’s behavior over time."
+    "The action-value $q_{\\pi}(s, a)$ serves as a signal that guides the gradient update, indicating whether the probability of selecting an action should be increased or decreased to improve the policy.\n",
+    "* If an action's expected reward is better than average, $q_{\\pi}(s, a)$ will be high. This increases the probability of selecting that action in the future.\n",
+    "* If an action's expected reward is worse than average, $q_{\\pi}(s, a)$ will be low or negative. This decreases the probability of selecting that action.\n",
+    "\n",
+    "Thus, with the two term together, the policy gradient theorem naturally pushes the policy toward actions that yield higher rewards, improving the agent’s behavior over time.\n",
+    "\n",
+    "The update rule is given by\n",
+    "\n",
+    "$$\\theta_{t+1} = \\theta_t + \\alpha \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\nabla_{\\theta} \\pi(a \\mid s) , q_{\\pi}(s, a)$$\n",
+    "\n",
+    "## Stochastic Policy Gradient\n",
+    "In the current policy gradient expression, it requires summing over all possible state action pairs to computes the full gradient, which is inpractical since the state action space is often very large.\n",
+    "$$\\nabla_{\\theta} r(\\pi) = \\sum_{s \\in \\mathcal{S}} \\mu_{\\pi}(s) \\sum_{a \\in \\mathcal{A}} \\nabla_{\\theta} \\pi(a \\mid s) , q_{\\pi}(s, a)$$\n",
+    "\n",
+    "Therefore, we can simplify the gradient computation by computing a stochastic gradient of only based on only one samples. This can be done by replacing $s$ and $a$ with an observed state action pair $(S_t, A_t)$.\n",
+    "\n",
+    "$$\\nabla_{\\theta} r(\\pi) \\approx \\frac{\\nabla_{\\theta} \\pi(A_t \\mid S_t)}{\\pi(A_t \\mid S_t)} q_{\\pi}(S_t, A_t) = \\nabla_{\\theta} \\ln{\\pi(A_t \\mid S_t)}q_{\\pi}(S_t, A_t)$$\n",
+    "\n",
+    "This formula approximates the true grtadient using only one sample, and the update rule becomes\n",
+    "\n",
+    "$$\\theta_{t+1} = ...$$\n",
+    "\n",
+    "\n",
+    "## Stochastic Policy Gradient\n",
+    "\n",
+    "In the current policy gradient expression, the exact policy gradient sums over all state–action pairs, which is intractable in large spaces:\n",
+    "\n",
+    "$$\\nabla_\\theta r(\\pi_\\theta)\n",
+    "= \\sum_{s\\in\\mathcal S}\\mu_{\\pi_\\theta}(s)\\sum_{a\\in\\mathcal A}\\pi_\\theta(a\\mid s),\\nabla_\\theta \\ln \\pi_\\theta(a\\mid s) q_{\\pi_\\theta}(s,a)$$\n",
+    "\n",
+    "Instead, we use a stochastic estimation by sampling a single state–action pair $(S_t,A_t)$ from the on-policy distribution and replacing the expectation with that sample\n",
+    "\n",
+    "$$\n",
+    "\\nabla_\\theta r(\\pi_\\theta)\n",
+    "\\approx \\nabla_\\theta \\ln \\pi_\\theta(A_t\\mid S_t) q(S_t,A_t)\n",
+    "$$\n",
+    "\n",
+    "where $q(S_t,A_t)$ is an observed sample at a timesteps. Now, the agent is able update the policy online after each timestep with the newly observed state-action pair. Therefore, the update rule becomes\n",
+    "\n",
+    "$$\n",
+    "\\theta_{t+1}\n",
+    "= \\theta_t + \\alpha, \\nabla_\\theta \\ln \\pi_\\theta(A_t\\mid S_t) q(S_t,A_t)\n",
+    "$$\n",
+    "\n",
+    "## Actor-Critic Algorithm"
    ]
   },
   {
