--- a/notebooks/Neural network.ipynb
+++ b/notebooks/Neural network.ipynb
@@ -1393,9 +1393,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1407,7 +1407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
