NLP: Added BPE algo

--- a/notebooks/NLP.ipynb
+++ b/notebooks/NLP.ipynb
@@ -38,6 +38,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f62f6424",
+   "metadata": {},
+   "source": [
+    "# Tokenization methods\n",
+    "Tokenization strategies generally classified into character level or word level, but both with their own issues.\n",
+    "\n",
+    "* Character Level Tokenization:Treat every character (`'a'`, `'b'`, `'c'`) as a token. This is a simple method and will gives a fixed vocabulary size, but can cause context overflow because even a shrot sentence becomes a massive sequence of tokens. This fills up the model's memory (context window) too quickly, making it impossible to process long documents.\n",
+    "\n",
+    "* Word Level Tokenization: Treat every unique word as a token. This solves the long context problem of character level tokenization but it fails to see the relationship between similar words. For example, `\"Study\"`, `\"Studying\"`, and `\"Studies\"` share the same semantic meaning but differ only in grammar/tense. Word level tokenization treats them as 3 completely unrelated IDs, forcing the model to relearn the concept of `\"studying\"` from scratch, even if it already knows `\"study\"`, and this will make the vocabulary size to be unnecessarily large with lots of redundancy.\n",
+    "\n",
+    "\n",
+    "BPE is a subword tokenization method that combines the benefits of both character and word level tokenization by breaking words into meaningful \"subwords\" based on frequency. For example, BPE identifies `\"study\"`, `\"ing\"`, and `\"es\"` are frequent building blocks, so instead of storing 3 separate words, BPE tokenizes them dynamically:\n",
+    "* `\"studying\"` $\\rightarrow$ `[\"study\", \"ing\"]`\n",
+    "* `\"studies\"` $\\rightarrow$ `[\"study\", \"es\"]`\n",
+    "\n",
+    "This method allow the model to capture the semantic meaning (`study`) and the tense meaning (`ing` or `es`) efficiently without blowing up the vocabulary size or the sequence length.\n",
+    "\n",
+    "## BPE Algorithm\n",
+    "BPE is an iterative process that grows the vocabulary from characters up to subwords and words by selecting the tokens that appears most commonly together and combine them into new tokens.\n",
+    "\n",
+    "1.  **Initialize (Character Level):**\n",
+    "    * Start with a vocabulary containing only individual characters (and a special end-of-word symbol like `</w>`).\n",
+    "    * Represent all words in your data as sequences of these characters.\n",
+    "    * *Example Data:* `['h', 'u', 'g', '</w>']`, `['p', 'u', 'g', '</w>']`\n",
+    "\n",
+    "2.  **Count Pairs:**\n",
+    "    * Scan the entire dataset and count the frequency of every adjacent pair of tokens.\n",
+    "    * *Example:* How often does `u` appear next to `g`?\n",
+    "\n",
+    "3.  **Merge the Best Pair:**\n",
+    "    * Identify the single most frequent pair in the data (e.g., `u` + `g`).\n",
+    "    * Merge them into a new, single token (e.g., `ug`).\n",
+    "    * Add this new token to the vocabulary.\n",
+    "\n",
+    "4.  **Update Data:**\n",
+    "    * Replace all occurrences of that pair in the dataset with the new token.\n",
+    "    * *Example Data becomes:* `['h', 'ug', '</w>']`, `['p', 'ug', '</w>']`\n",
+    "\n",
+    "5.  **Repeat:**\n",
+    "    * Repeat steps 2-4 for a fixed number of merges (hyperparameter).\n",
+    "    * **Result:** Common words become single tokens (e.g., \"apple\"), while rare words remain as sequences of subwords (e.g., \"un\" + \"friend\" + \"ly\").\n",
+    "    \n",
+    "<img src=\"https://pantelis.github.io/aiml-common/lectures/nlp/nlp-introduction/tokenization/images/bpe-example.png\" width=500>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d95eecee",
    "metadata": {},
    "source": [
