RL: update TD lambda

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -749,7 +749,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1524dbf8",
    "metadata": {},
@@ -833,7 +832,7 @@
     "\n",
     "In n-Step TD algorithms, the parameter $n$ must be tuned carefully to find the \"sweet spot\" in the error curve:\n",
     "1. Initial Improvement: As $n$ increases from 1, the prediction error usually drops because the bias is strictly decreasing. We are relying less on the potentially faulty initial value estimates.\n",
-    "2. The Turning Point: However, if $n$ becomes too large, the error starts to increase again. At this point, the bias is already very low, but the variance begins to dominate. The target becomes too noisy because it includes too many random transitions.\n",
+    "2. The Turning Point: However, if $n$ becomes too large, the error starts to increase again. At this point, the bias is already very low (very close to pure MC), but the variance begins to dominate. The target becomes too noisy because it includes too many random transitions.\n",
     "\n",
     "Therefore, the optimal $n$ is usually an intermediate value that balances the stability of TD with the accuracy of MC, which means balancing the bias and variance within the estimations.\n",
     "\n",
@@ -860,15 +859,19 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "G_t^\\lambda &= (1 - \\lambda) \\sum_{n=1}^{\\infty} \\lambda^{n-1} G_t^{(n)} = (1 - \\lambda) \\cdot \\underbrace{\\left( R_{t+1} + \\gamma V(S_{t+1}) \\right)}_{\\text{1-step return } (G_t^{(1)})} \n",
+    "G_t^\\lambda &= (1 - \\lambda) \\sum_{n=1}^{L-1} \\lambda^{n-1} G_t^{(n)} + \\lambda^{L-1} G_t^{(L)}= (1 - \\lambda) \\cdot \\underbrace{\\left( R_{t+1} + \\gamma V(S_{t+1}) \\right)}_{\\text{1-step return } (G_t^{(1)})} \n",
     "+ (1 - \\lambda)\\lambda \\cdot \\underbrace{\\left( R_{t+1} + \\gamma R_{t+2} + \\gamma^2 V(S_{t+2}) \\right)}_{\\text{2-step return } (G_t^{(2)})} + (1 - \\lambda)\\lambda^2 \\cdot \\underbrace{\\left( R_{t+1} + \\gamma R_{t+2} + \\gamma^3 R_{t+3} + \\gamma^3 V(S_{t+3}) \\right)}_{\\text{3-step return } (G_t^{(3)})}\n",
-    "+ \\dots\n",
+    "+ \\dots + \\lambda^{L-1} G_t^{(L)}\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
     "* $G_t^{(n)}$: the n-step return for the a state at timestep $t$.\n",
-    "2. $\\lambda$: the decay factor between 0 and 1, so as $n$ increases (looking further into the future), the weight we assign to that return decays because we care more about the more recent returns.\n",
-    "3. *$(1 - \\lambda)$: a normalization constant that ensures that all the weights sum up to exactly 1, so the final target is mathematically valid.\n",
+    "* $L$: the length of an episode\n",
+    "* $\\lambda$: the decay factor between 0 and 1, so as $n$ increases (looking further into the future), the weight we assign to that return decays because we care more about the more recent returns.\n",
+    "* $(1 - \\lambda)$: a normalization constant that ensures that all the weights sum up to exactly 1, so the final target is mathematically valid.\n",
+    "\n",
+    "Note: the final return of the episode is weighted by $\\lambda^{L-1}$ instead of $\\lambda^{L}$ because this ensures the sum of weight is always 1 for any episode length $L$, where\n",
+    "$(1 - \\lambda)\\sum^{L-1}_{n=1}\\lambda^{n-1} + \\lambda^{L-1} = 1$\n",
     "\n",
     "The parameter $\\lambda$ acts as a slider for how much you trust \"deep\" future data versus your current immediate estimate. A smaller $\\lambda$ means putting more empahsis onto the recent data, where a larger $\\lambda$ means putting more weights onto the future data.\n",
     "\n",
@@ -876,7 +879,7 @@
     "    The formula collapses. The weight for the 1-step return becomes 1, and all other weights become 0, so only the immediate next step is considered, which is equivalent to TD-0.\n",
     "\n",
     "* If $\\lambda = 1$ (Monte Carlo):\n",
-    "    Impossbile because when $\\lambda = 1$, the return is just 0. However, as $\\lambda$ approaches 1, the decay disappears. The algorithm puts all the weight on the longest possible return (the full episode), so only the actual final outcome matters, which is equivalent to Monte-Carlo\n",
+    "    The formula collapses to $G_t^\\lambda = G_t^{(L)}$. The algorithm only use the longest possible return (the full episode), which is equivalent to Monte-Carlo\n",
     "\n",
     "* If $0 < \\lambda < 1$ (TD Lambda):\n",
     "    Balanced approach, where the immediate steps have the highest weight (low variance) while the distant steps still contribute, correcting the bias of your initial estimates.\n",
