NLP: Update tokenization, embedding traing and CE loss

--- a/notebooks/NLP.ipynb
+++ b/notebooks/NLP.ipynb
@@ -80,7 +80,14 @@
     "    * Repeat steps 2-4 for a fixed number of merges (hyperparameter).\n",
     "    * **Result:** Common words become single tokens (e.g., \"apple\"), while rare words remain as sequences of subwords (e.g., \"un\" + \"friend\" + \"ly\").\n",
     "    \n",
-    "<img src=\"https://pantelis.github.io/aiml-common/lectures/nlp/nlp-introduction/tokenization/images/bpe-example.png\" width=500>"
+    "<img src=\"https://pantelis.github.io/aiml-common/lectures/nlp/nlp-introduction/tokenization/images/bpe-example.png\" width=500>\n",
+    "\n",
+    "## Implementation\n",
+    "After performing BPE, we obtain a large vocabulary, and we stores it in a hashmap with the key being the token itself and the value being the index of each token (e.g. `{\"study\": 4521, \"ing\": 102, \"apple\": 339, ...}`). The actual value of the index doesn't matter since it's just an identifier, which will later be used to identify the correct word embedding.\n",
+    "\n",
+    "Therefore, given any inputs, the text will first be segmented into a sequence of valid tokens from the vocabulary, and then converted into a sequence of token indicies.\n",
+    "\n",
+    "<img src=\"https://cdn.prod.website-files.com/67e0e1c8c7139275092d8943/67e0e1c8c7139275092d8d89_66db4fe5ffb5398fd15c1aa8_66618d3b0d18959af0cfcb1c_Marqo%252520Course%252520(9).png\" width=500>"
    ]
   },
   {
@@ -88,11 +95,10 @@
    "id": "d95eecee",
    "metadata": {},
    "source": [
-    "# Feature Extractions\n",
+    "# Word Representation\n",
+    "Word representation involves transforming raw input text into numerical representations that retain meaningful information, enabling models to process and analyze the data. In NLP, word representation techniques help capture the importance, relationships, and patterns of words or phrases in a corpus.\n",
     "\n",
-    "Feature extraction involves transforming raw input data into numerical representations that retain meaningful information, enabling models to process and analyze the data. In NLP, feature extraction techniques help capture the importance, relationships, and patterns of words or phrases in a corpus.\n",
-    "\n",
-    "## Common Feature Extraction Techniques\n",
+    "## Common Word Representation Techniques\n",
     "\n",
     "1. **Bag of Words (BoW)**  \n",
     "   Bag of Words represents text as a collection of its words, ignoring grammar and word order but retaining word frequency. It is simple and quick to compute, but the lack of contextual understanding and high-dimensional sparsity can limit its effectiveness. Additionally, non-informative terms (e.g., stop words) may appear frequently and dominate the representation.  \n",
@@ -164,10 +170,11 @@
     "\n",
     "$$e_w = Eo_w$$\n",
     "\n",
-    "$E$: the embedding matrix with number of rows equals to number of features for the embedding and number of columns equals to the number of vocabulary in the one-hot encoding dictionary\n",
+    "$E$: the embedding matrix with number of rows equals to number of features for the embedding and number of columns equals to the size of the vocabulary, where each column correspond to an embedding vector of a token\n",
     "\n",
-    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/1*Bq6lIOdjCK172I1V04RwLA.png\" width=500>\n",
+    "<img src=\"https://blogger.googleusercontent.com/img/a/AVvXsEhE3s3vC-QZBZ5Xdb3q6X0JR8uSa25smRVB0pk-r_IGUGBIb6mnS4CumYCwPYKtqsKK-3nE4qCsVCd3m62iraz124xvdhtkaWs4YgVyfsrH8TjI2iiMsd_XIUpBhSnl_TvyWCxkCb916cXjChKDaQ3DWFXwlcF9p2b1X6qNzoXPa6F0fAH7xsp86cGZU_k=w1200-h630-p-k-no-nu\" width=500>\n",
     "\n",
+    "In implementation, instead of turning a tokenized input into a huge one-hot matrix then perform multiplication, we can simply use the index of each token as identifier to extract the corresponding columns from the embedding matrix, since each column represents a word embedding.\n",
     "\n",
     "## Apply word embedding\n",
     "Word embeddings is widely used for transfer learning\n",
@@ -348,7 +355,13 @@
     "\n",
     "$f$: a weighting function such that $f(X_{i,j}) = 0$ when $X_{i,j} = 0$ (do not add loss if two words are not in context)\n",
     "\n",
-    "Initially, we initialize $e$ and $\\theta$ randomly. After training, given the symmetry that $e$ and $\\theta$ play in this model, the final word embedding $e_w^{final} = \\frac{e_w + \\theta_w}{2}$"
+    "Initially, we initialize $e$ and $\\theta$ randomly. After training, given the symmetry that $e$ and $\\theta$ play in this model, the final word embedding $e_w^{final} = \\frac{e_w + \\theta_w}{2}$\n",
+    "\n",
+    "\n",
+    "# Modern Word Embeddings\n",
+    "In modern architectures, instead of pre-train the word embeddings (like Glove and Word2Vec) before training the model, the common approach is to train the embeddings as paarameters during model training, so the embeddings and model are trained from end to end.\n",
+    "\n",
+    "To do this, the embedding matrix is first randomly initialized, and treated as trainable parameters. Intialially, the model predictions will be bad since neither the embeddings nor the model are trained. Through massive training, the both the model's parameters and the embeddings will be updated through backpropagation, and eventually, the embeddings will represent the precise semantic concept of words that the specific model finds most useful. Compared to the traditional approaches, trainable embeddings learns more native and with better expressitivity since the embeddings is learned specifically to adapt the model and learned through very large corpus of text."
    ]
   },
   {
@@ -1221,6 +1234,9 @@
     "\n",
     "$y_t$: one-hot encoded ground truth token\n",
     "\n",
+    "Minimizing the Cross-Entropy Loss is mathematically equivalent to maximizing the likelihood of predicting the correct token.\n",
+    "\n",
+    "Since each training example has only one ground truth token (represented by a one-hot vector), the calculation of the loss strictly focuses on the probability of that specific token rather than the entire vocabulary. However, because the Softmax function uses all tokens in its denominator, minimizing this loss via backpropagation (to increase the probability of the ground truth) will implicitly reduce the probability of all other 'incorrect' tokens.\"\n",
     "\n",
     "Because sequences are padded to the same length for batching, some positions in the ground truth labels are `<pad>` tokens, which shouldn't contribute to the loss.\n",
     "\n",
