NLP: Update RNN

--- a/notebooks/NLP.ipynb
+++ b/notebooks/NLP.ipynb
@@ -423,10 +423,40 @@
     "\n",
     "Note: in RNN, tanh activation is used most often\n",
     "\n",
-    "## Loss function\n",
-    "$$L(\\hat{y}, y) = \\sum^{T_y}_{t=1} -y^{<t>}log(\\hat{y}^{<t>}) - (1 - y^{<t>})log(1 - \\hat{y}^{<t>})$$\n",
+    "## Backpropogation Through Time\n",
+    "Since RNN process information recursively, when performing backpropogation to update model's weights. For a processed input batch (assuming we have a output at each timestep, but the sequences in the batch are not necessarily the same length), we first applies a mask to remove invalid loss. For example, the input `[ \"I\",   \"love\", \"cats\", \"<PAD>\", \"<PAD>\" ]` has the loss of `[0.1, 0.2, 0.05, 2.3, 4.1]`, but the last two entries are not useful because they are not loss about the real input. Therefore, we multiplies the loss with a mask of `[1, 1, 1, 0, 0]`.\n",
     "\n",
-    "The BCE loss function is used at each timestep to compute the difference between the predicted probability, $\\hat{y}^{<t>}$, and the true labe, $\\hat{y}^{<t>}$. The true label only contains one entry with value 1 and the rest are 0s (one-hot encoding)\n",
+    "Then, we compute a scaler valued batch loss, where \n",
+    "$$L=\\frac^{\\sum{\\text{Valid Token Loss}}}_{\\text{Number of Valid Tokens in the Batch}}$$\n",
+    "\n",
+    "Finally, we compute the gradient of the loss with respect to the weights, and update the model's parameters.\n",
+    "\n",
+    "\n",
+    "## Loss Function\n",
+    "At each timestep $t$, the Cross-Entropy Loss function computes the error between the predicted probability distribution $\\hat{y}^{\\langle t \\rangle}$ and the ground truth $y^{\\langle t \\rangle}$:\n",
+    "\n",
+    "$$\\mathcal{L}_t(\\hat{y}, y) = - \\sum^{V}_{j=1} y^{\\langle t \\rangle}_j \\log(\\hat{y}^{\\langle t \\rangle}_j)$$\n",
+    "\n",
+    "* $V$: Size of the vocabulary.\n",
+    "* $y^{\\langle t \\rangle}_j$: Ground truth (1 for the correct token, 0 for others).\n",
+    "* $\\hat{y}^{\\langle t \\rangle}_j$: Predicted probability for token $j$.\n",
+    "\n",
+    "Since there is only one ground truth label (one-hot encoding) within the vocabulary $V$ at each timestep, the summation effectively collapses into a single term corresponding to the correct class: $-\\log(\\hat{y}_{correct})$.\n",
+    "\n",
+    "## Backpropagation Through Time (BPTT) & Batching\n",
+    "Since RNNs process information recursively, special care must be taken during training batches with variable-length sequences.\n",
+    "\n",
+    "**1. Masking Invalid Timesteps**\n",
+    "Assuming we produce an output at every timestep, but sequences in the batch have different lengths (padded to match the longest sequence), we must ignore predictions made on padding tokens.\n",
+    "* Example: If an batch example is `[\"I\", \"love\", \"cats\", \"<PAD>\", \"<PAD>\"]`, the raw loss might look like `[0.1, 0.2, 0.05, 2.3, 4.1]`. We apply a binary mask `[1, 1, 1, 0, 0]` via element-wise multiplication, the masked loss becomes `[0.1, 0.2, 0.05, 0.0, 0.0]`.\n",
+    "\n",
+    "**2. Calculating Batch Loss**\n",
+    "We compute a single scalar-valued loss for the entire batch by averaging only the valid tokens:\n",
+    "\n",
+    "$$\\mathcal{L}_{batch} = \\frac{\\sum \\text{Valid Token Losses}}{\\text{Number of Valid Tokens}}$$\n",
+    "\n",
+    "**3. Gradient Update**\n",
+    "Finally, we perform backpropagation. The gradients are calculated by unrolling the network and accumulating errors from all valid timesteps backwards through the sequence, so the gradient is computed $T$ times, once for each timestep. Once the total gradient with respect to the weights is computed, we compute the sum and perform a single parameter update for the batch.\n",
     "\n",
     "## Different types of RNN\n",
     "1. Many to many: many input and many output (eg. translation)\n",
