--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -870,7 +870,7 @@
     "* $\\lambda$: the decay factor between 0 and 1, so as $n$ increases (looking further into the future), the weight we assign to that return decays because we care more about the more recent returns.\n",
     "* $(1 - \\lambda)$: a normalization constant that ensures that all the weights sum up to exactly 1, so the final target is mathematically valid.\n",
     "\n",
-    "Note: the final return of the episode is weighted by $\\lambda^{L-1}$ instead of $\\lambda^{L}$ because this ensures the sum of weight is always 1 for any episode length $L$, where\n",
+    "Note: the final return of the episode is weighted by $\\lambda^{L-1}$ because this ensures the sum of weight is always 1 for any episode length $L$, where\n",
     "$(1 - \\lambda)\\sum^{L-1}_{n=1}\\lambda^{n-1} + \\lambda^{L-1} = 1$\n",
     "\n",
     "The parameter $\\lambda$ acts as a slider for how much you trust \"deep\" future data versus your current immediate estimate. A smaller $\\lambda$ means putting more empahsis onto the recent data, where a larger $\\lambda$ means putting more weights onto the future data.\n",
@@ -886,15 +886,35 @@
     "\n",
     "The algorithm at each timstep uses all valid $n$-step returns available from the current state until the terminal state, so the earlier timestep will have more data avalible and timestep closer to the terminal state will have less data avaliable.\n",
     "\n",
-    "* At the beginning of the trajectory, the agent looks ahead at 1-step, 2-step, 3-step... all the way to the final step $T$ (the Monte Carlo return) and calculates a weighted average of all these returns, which blends the low-variance bias of TD(0) with the high-variance unbiasedness of Monte Carlo.\n",
+    "* At the beginning of the trajectory, the agent looks ahead at 1-step, 2-step, 3-step... all the way to the final step $T$ (the Monte Carlo return) and calculates a weighted average of all these returns, which blends the low-variance bias of TD(0) with the high-variance unbiasedness of Monte Carlo. This method maximizes the data utilization of the entire trajectory\n",
     "\n",
-    "* At the end of the trajectory, the agent does not have any future steps. At step $T-1$, the only valid return is the 1-step return ($R_T + \\gamma V(S_T)$), which effectively behaving like TD(0).\n",
-    "\n",
+    "* At the end of the trajectory, the agent does not have any future steps. At step $T-1$, the only valid return is the 1-step return ($R_T + \\gamma V(S_T)$), which effectively behaving like TD(0). This is okay since that's the only data avaliable\n",
     "\n",
     "### The Forward View\n",
     "The reason above explanation is often separated from implementation is because this is the forward view of the algorithm, so in order to compute $G_t^{(n)}$, we need to wait for the entire episode to terminate, making it impossible perform online learning.\n",
     "\n",
     "<img src=\"https://towardsdatascience.com/wp-content/uploads/2019/08/1L-LUOyW5W-0gBxx80GHdHQ.png\" width=500>\n",
+    "\n",
+    "### The Backward View (Eligibility Tracing)\n",
+    "To make the TD($\\lambda$) learning online, we use a technique called eligibility tracing. Instead of \"looking forward\" to compute the return (which is impossible during online learning), eligibility tracing allows the current error to \"look backward\" and update the past states that contributed to the current situation.\n",
+    "\n",
+    "To do this, the agent maintains an eligibility trace, $E(s)$, for every state, initialized to 0. At each timestep $t$:\n",
+    "1. Decay: The eligibility of all states is decayed by a factor of $\\gamma \\lambda \\in (0, 1)$.\n",
+    "2. Increment: The eligibility of the current state $S_t$ is increased by 1 (Accumulating Trace), indicating it was just visited.\n",
+    "\n",
+    "Then, we calculate the current TD error ($\\delta_t$):\n",
+    "$$\\delta_t = R_{t+1} + \\gamma v(S_{t+1}) - v(S_t)$$\n",
+    "\n",
+    "Crucially, we then update the value of every state $s$ (not just the current one), scaled by its eligibility trace:\n",
+    "$$v(s) \\leftarrow v(s) + \\alpha \\cdot \\delta_t \\cdot E_t(s)$$\n",
+    "\n",
+    "This allows online learning because the update at timestep $t$ relies only on available data ($S_t, R_{t+1}, S_{t+1}$). \n",
+    "\n",
+    "These updates are initially imperfect because they rely on estimated values of future state ($v(S_{t+1})$) that may contain errors. However, the mechanism allows for continuous correction:\n",
+    "* When the agent reaches a future state and finds there is an error in its previous estimation, $\\delta_{future}$, this new error is broadcast backwards because  we need to correct all the past estimations that used this estimation that contains an error.\n",
+    "* However, the error is scaled down by $\\gamma \\lambda$ because if this state that contains error is in the far future, the impact of its error will reduced by a factor of $\\lambda$ every timestep, so when we're correcting the error, the correction term also need to be scaled down by its eligibility $E(s)$.\n",
+    "\n",
+    "At the end of an episode, the learned value function will be the same as performing the forward view since both views are mathematically the same.\n",
     "\n",
     "## TD for Control\n",
     "When using TD learning for control, knowing the optimal state-value function from policy evaluation alone is not enough in a model-free setting, because we do not know the environment’s transition dynamics. Without a model, we can’t directly compute which action leads to the best next state from just $v(s)$. Instead, we learn the action-value function $q(s, a)$, which estimates the expected return for taking action $a$ in state $s$ and then following the policy. This allows us to both evaluate and improve the policy directly. We will address 3 different TD control algorithms: SARSA, Q-learning, and expected SARSA\n",
