--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -599,7 +599,7 @@
     "\n",
     "Using an $\\varepsilon$-soft policy ensures exploration and removes the need for exploring starts. However, there’s a trade-off, where the agent can only converge to the optimal $\\varepsilon$-soft policy, not the optimal deterministic policy. Even after learning a near-optimal policy, the agent still occasionally explores due to the non-zero $\\varepsilon$.\n",
     "\n",
-    "In practice, the performance of the optimal $\\varepsilon$-soft policy is often close to that of the optimal deterministic policy, and perform well enough for the need.\n",
+    "In theory, if each state-action pair is visited many times, its action-value estimate will converge towards the true value, and if we are confident enough about the estimation, we can stop exploring and commit to a greedy policy.\n",
     "\n",
     "### Monte Carlo Control with $\\varepsilon$-Soft Policy (Policy Iteration)\n",
     "The process is similar to standard Monte Carlo policy iteration, with the key difference being the use of stochastic policies:\n",
@@ -628,8 +628,11 @@
     "       $$\n",
     "\n",
     "5. Repeat steps 2–4 until convergence.\n",
+    "6. Convert $\\varepsilon$-soft policy to greedy policy.\n",
     "\n",
-    "Overall, $\\varepsilon$-soft policy solves the problem of insufficient exploration with a large number of possible state-action pairs, and is able to achieve a good enough, sub-optimal stochastic policy."
+    "Overall, $\\varepsilon$-soft policy solves the problem of insufficient exploration with a large number of possible state-action pairs, and is able to achieve a good enough, sub-optimal stochastic policy. Once all possible state-action pairs are visited enough number of times, we can convert the policy into a greedy one.\n",
+    "\n",
+    "In tabular Monte Carlo, both exploring start and $\\varepsilon$-greedy ensure asymptotic convergence to the optimal policy given infinite episodes and satisfying specific conditions."
    ]
   },
   {
